feat: 新增kotlin模块，改进部分方法